# src/main/java/it/tim/bl/gestione/domfisso/dto/VisualizzazioneRichiestaAttivazioneDomiciliazioneFisso.java
@@ -1,5 +1,7 @@
 package it.tim.bl.gestione.domfisso.dto;
 
+import com.fasterxml.jackson.annotation.JsonFormat;
+import it.tim.bl.gestione.domfisso.util.MaskingUtil;
 import lombok.Data;
 
 import java.time.LocalDateTime;
@@ -9,6 +11,7 @@ public class VisualizzazioneRichiestaAttivazioneDomiciliazioneFisso {
 
 	    private String tipoOperazione;
 	    private String subsys;
+	    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd'T'HH:mm:ss.SSS")
 	    private LocalDateTime dataOraOp;
 	    private String cf;
 	    private UtenzaFissa utenzaFissa;
@@ -17,12 +20,19 @@ public class VisualizzazioneRichiestaAttivazioneDomiciliazioneFisso {
 	    public static class UtenzaFissa {
 	        private String prefisso;
 	        private String numero;
+
+			@Override
+			public String toString() {
+				return "UtenzaFissa [prefisso=" + MaskingUtil.mask(prefisso) + ", numero=" + MaskingUtil.mask(numero)
+						+ "]";
+			}
 	    }
 
 		@Override
 		public String toString() {
-			return "VisualizzaRequestDto [tipoOperazione=" + tipoOperazione + ", subsys=" + subsys + ", dataOraOp=" + dataOraOp
-					+ ", cf=" + cf + ", utenzaFissa=" + utenzaFissa + "]";
+			return "VisualizzazioneRichiestaAttivazioneDomiciliazioneFisso [tipoOperazione=" + tipoOperazione
+					+ ", subsys=" + subsys + ", dataOraOp=" + dataOraOp + ", cf=" + MaskingUtil.mask(cf)
+					+ ", utenzaFissa=" + utenzaFissa + "]";
 		}
 	    
 	    
